--- a/notebooks/Reference_codes/Apply_tcc.ipynb
+++ b/notebooks/Reference_codes/Apply_tcc.ipynb
@@ -338,7 +338,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
