--- a/notebooks/Zero_loss_comparisons.ipynb
+++ b/notebooks/Zero_loss_comparisons.ipynb
@@ -6,7 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.io import loadmat"
+    "from scipy.io import loadmat\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "import sys\n",
+    "sys.path.append(\"../functions\")\n",
+    "from GS_data1d import intensity_profile, construct_DM1d, propagation_dm1d"
    ]
   },
   {
@@ -33,7 +38,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
